--- a/res/layout/card_bar.xml
+++ b/res/layout/card_bar.xml
@@ -25,7 +25,7 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_divider_padding" >
 
-    <LinearLayout
+    <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -37,16 +37,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/card_background"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/card_vertical_margin" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/card_horizontal_margin"
-                android:paddingRight="@dimen/card_horizontal_margin"
-                android:paddingBottom="@dimen/card_header_padding" >
+ >
+                
+                <View
+        			android:id="@+id/barTop"
+	    			android:layout_width="4dp"
+	    			android:layout_height="40dp"
+	    			android:background="@color/actionbar_background" 
+	    			android:paddingRight="@dimen/card_separator_padding"/>
 
                 <TextView
                     android:id="@+id/title"
@@ -54,7 +58,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textColor="@color/card_title_text"
-                    android:textSize="@dimen/card_title_text_size" />
+                    android:textSize="@dimen/card_title_text_size"
+                    android:paddingLeft="@dimen/card_separator_padding" />
 
                 <ImageView
                     android:id="@+id/headerbutton"
