--- a/res/layout/card_updates_notices.xml
+++ b/res/layout/card_updates_notices.xml
@@ -2,9 +2,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/card_horizontal_margin"
+    android:orientation="horizontal"
     android:paddingRight="@dimen/card_horizontal_margin">
+    
+    <View
+        android:id="@+id/bar"
+	    android:layout_width="4dp"
+	    android:layout_height="match_parent"
+	    android:background="@color/actionbar_background" 
+	    android:paddingRight="@dimen/card_separator_padding"/>
 
     <TextView
         android:id="@+id/updateitem"
@@ -12,6 +18,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/card_text"
         android:textSize="@dimen/card_medium_text_size" 
-        android:paddingBottom="@dimen/card_separator_padding"/>
+        android:paddingLeft="@dimen/card_separator_padding"
+        />
 
 </LinearLayout>
