--- a/res/layout/card_bar.xml
+++ b/res/layout/card_bar.xml
@@ -38,12 +38,17 @@
             android:layout_height="match_parent"
             android:background="@color/card_background"
             android:orientation="vertical">
+            
+            <View
+        		android:id="@+id/barTop2"
+	    		android:layout_width="4dp"
+	    		android:layout_height="@dimen/card_separator_padding"
+	    		android:background="@color/actionbar_background" />
 
             <LinearLayout
                 android:id="@+id/header_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
- >
+                android:layout_height="wrap_content">
                 
                 <View
         			android:id="@+id/barTop"
@@ -51,7 +56,7 @@
 	    			android:layout_height="40dp"
 	    			android:background="@color/actionbar_background" 
 	    			android:paddingRight="@dimen/card_separator_padding"/>
-
+               
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="match_parent"
