Add ground work for Config Card
Change-Id: If0a5b87aa31a31e426f250e38ab59764981adabb

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -20,6 +20,12 @@
 
 <resources>
 
+    <string-array name="performance_array">
+        <item>Performance</item>
+        <item>Standard</item>
+        <item>Battery Smart</item>
+    </string-array>
+
     <!-- CHECK UPDATES FREQUENCY -->
     <string-array name="time_notifications_entries">
         <item>@string/time_notifications_never</item>
