--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,7 +21,7 @@
      <style name="ActionBar" 
             parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/actionbar_background</item>
-        <item name="android:icon">@drawable/ic_launcher_plain</item>
+        <item name="android:icon">@drawable/ic_launcher</item>
     </style>
 
 </resources>
