Add Config for kernel
Change-Id: I9992a1bccfa68e3944c36e010276e129e1c3104b

--- a/res/layout/card_config.xml
+++ b/res/layout/card_config.xml
@@ -16,13 +16,22 @@
         		android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:textColor="@color/card_text"
-        		android:paddingBottom="@dimen/card_separator_padding"/>
+			android:textSize="@dimen/card_medium_text_size"/>
 
-    		<Spinner
-        		android:id="@+id/performance_spinner"
+    		<Switch
+        		android:id="@+id/performance_enable"
         		android:layout_width="wrap_content"
-        		android:layout_height="wrap_content" />
+        		android:layout_height="wrap_content"/>
 
 	</LinearLayout>
+
+	<TextView
+        		android:id="@+id/tvPerformanceDesc"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:textColor="@color/card_text"
+			android:textSize="@dimen/card_medium_text_size" 
+			android:text="@string/performancedesc"
+        		android:paddingBottom="@dimen/card_separator_padding"/>
 
 </LinearLayout>
