Fix bug of notices overriding card when loading
Change-Id: I577bb8ad459b0926c9c211493d059373f0dc8086

--- a/res/layout/card_config.xml
+++ b/res/layout/card_config.xml
@@ -18,6 +18,11 @@
         		android:textColor="@color/card_text"
 			android:textSize="@dimen/card_medium_text_size"/>
 
+		<View
+            		android:layout_width="0dp"
+            		android:layout_height="0dp"
+            		android:layout_weight="1"/>           
+
     		<Switch
         		android:id="@+id/performance_enable"
         		android:layout_width="wrap_content"
