Config Cards collapsed by default
Change-Id: Ic419a4dce6f15723496c2b9c255024af328997d5

--- a/res/layout/card_config_kernel.xml
+++ b/res/layout/card_config_kernel.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/card_horizontal_margin"
-    android:paddingRight="@dimen/card_horizontal_margin">
+    android:paddingRight="@dimen/card_horizontal_margin"
+    android:id="@+id/llKernel"
+    android:visibility="gone">
 
 	<LinearLayout
     		android:layout_width="match_parent"
