--- a/res/layout/card_config_wifinoti.xml
+++ b/res/layout/card_config_wifinoti.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/card_horizontal_margin"
-    android:paddingRight="@dimen/card_horizontal_margin">
+    android:paddingRight="@dimen/card_horizontal_margin"
+    android:id="@+id/llWifiNoti"
+    android:visibility="gone">
 
 		<TextView
         		android:id="@+id/tvWifiNotiLabel"
@@ -16,8 +18,7 @@
     		<RadioGroup
         		android:id="@+id/radioWifiNoti"
         		android:layout_width="wrap_content"
-        		android:layout_height="wrap_content" 
-			android:visibility="gone">
+        		android:layout_height="wrap_content">
  
 			        <RadioButton
             				android:id="@+id/radioDisabled"
