--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -57,4 +57,48 @@
         <item>1</item>
         <item>3</item>
     </string-array>
+
+    <!-- Begin HALO settings -->
+    <string-array name="halo_state_array" translatable="false">
+       <item>@string/halo_state_black</item>
+       <item>@string/halo_state_white</item>
+    </string-array>
+
+    <string-array name="halo_size_array" translatable="false">
+        <item>@string/halo_size_miniscule</item>
+        <item>@string/halo_size_small</item>
+        <item>@string/halo_size_default</item>
+        <item>@string/halo_size_large</item>
+        <item>@string/halo_size_gigantic</item>
+        <item>@string/halo_size_monster</item>
+    </string-array>
+
+    <string-array name="halo_notify_count_array" translatable="false">
+        <item>@string/halo_notification_count_none</item>
+        <item>@string/halo_notification_count_total</item>
+        <item>@string/halo_notification_count_individual</item>
+        <item>@string/halo_notification_count_both</item>
+    </string-array>
+
+    <string-array name="halo_state_values" translatable="false">
+        <item>1</item>
+        <item>0</item>
+    </string-array>
+
+    <string-array name="halo_size_values" translatable="false">
+        <item>0.6</item>
+        <item>0.8</item>
+        <item>1.0</item>
+        <item>1.2</item>
+        <item>1.4</item>
+        <item>1.6</item>
+    </string-array>
+
+    <string-array name="halo_notify_count_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+    <!-- End HALO settings -->
 </resources>
