--- a/res/layout/card_config_halo.xml
+++ b/res/layout/card_config_halo.xml
@@ -8,9 +8,19 @@
     android:id="@+id/llHalo"
     android:visibility="gone">
 
+	<TextView
+        android:id="@+id/tvHaloDesc"
+   		android:layout_width="wrap_content"
+     	android:layout_height="wrap_content"
+        android:textColor="@color/card_text"
+    	android:textSize="@dimen/card_small_text_size"
+		android:text="@string/halodesc"
+        android:paddingBottom="@dimen/card_separator_padding"/>
+
 	<LinearLayout
    		android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
     	android:orientation="horizontal">
 
 		<TextView
@@ -35,7 +45,8 @@
 
     <LinearLayout android:id="@+id/halo_state"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
    		android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloState"
@@ -53,7 +64,8 @@
 
     <LinearLayout android:id="@+id/halo_hide"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
    		android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloHide"
@@ -76,7 +88,8 @@
 
     <LinearLayout android:id="@+id/halo_size"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
    		android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloSize"
@@ -94,7 +107,8 @@
 
     <LinearLayout android:id="@+id/halo_pause"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
    		android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloPause"
@@ -117,7 +131,8 @@
 
     <LinearLayout android:id="@+id/halo_msgbox"
    		android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
     	android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloMsgbox"
@@ -140,7 +155,8 @@
 
     <LinearLayout android:id="@+id/halo_notify_count"
    		android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="0dp"
+        android:layout_weight="1"
     	android:orientation="horizontal">
 
         <TextView android:id="@+id/tvHaloNotifyCount"
@@ -158,8 +174,10 @@
 
     <LinearLayout android:id="@+id/halo_unlock_ping"
    		android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:orientation="horizontal">
+    	android:layout_height="0dp"
+        android:layout_weight="1"
+    	android:orientation="horizontal"
+        android:paddingBottom="@dimen/card_separator_padding">
 
         <TextView android:id="@+id/tvHaloUnlockPing"
             android:layout_width="wrap_content"
@@ -178,14 +196,5 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-
-	<TextView
-        android:id="@+id/tvHaloDesc"
-   		android:layout_width="wrap_content"
-     	android:layout_height="wrap_content"
-        android:textColor="@color/card_text"
-    	android:textSize="@dimen/card_small_text_size"
-		android:text="@string/halodesc"
-        android:paddingBottom="@dimen/card_separator_padding"/>
 
 </LinearLayout>
