--- a/res/layout/card_config_networktraffic.xml
+++ b/res/layout/card_config_networktraffic.xml
@@ -8,13 +8,22 @@
     android:id="@+id/llNetworkTraffic"
     android:visibility="gone">
 
-	<LinearLayout 
+    <TextView
+              android:id="@+id/tvNetworkTrafficDesc"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="@color/card_text"
+        android:textSize="@dimen/card_small_text_size"
+        android:text="@string/networktrafficdesc"
+              android:paddingBottom="@dimen/card_separator_padding"/>
+
+	<LinearLayout
     		android:layout_width="match_parent"
     		android:layout_height="0dp"
         	android:layout_weight="1"
    		android:orientation="horizontal">
 
-        <TextView 
+        <TextView
 		android:id="@+id/tvNetworkTrafficState"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
@@ -22,19 +31,19 @@
             	android:textSize="@dimen/card_small_text_size"
             	android:text="@string/networktraffic_state_tv"/>
 
-        <Spinner 
+        <Spinner
 		android:id="@+id/networktraffic_state_spinner"
             	android:layout_width="fill_parent"
             	android:layout_height="wrap_content" />
 
     	</LinearLayout>
-	<LinearLayout 
+	<LinearLayout
     		android:layout_width="match_parent"
     		android:layout_height="0dp"
         	android:layout_weight="1"
    		android:orientation="horizontal">
 
-        <TextView 
+        <TextView
 		android:id="@+id/tvNetworkTrafficType"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
@@ -42,19 +51,20 @@
             	android:textSize="@dimen/card_small_text_size"
             	android:text="@string/networktraffic_type_tv"/>
 
-        <Spinner 
+        <Spinner
 		android:id="@+id/networktraffic_type_spinner"
             	android:layout_width="fill_parent"
             	android:layout_height="wrap_content" />
 
     	</LinearLayout>
-	<LinearLayout 
+	<LinearLayout
     		android:layout_width="match_parent"
     		android:layout_height="0dp"
         	android:layout_weight="1"
-   		android:orientation="horizontal">
+   		android:orientation="horizontal"
+             android:paddingBottom="@dimen/card_separator_padding">
 
-        <TextView 
+        <TextView
 		android:id="@+id/tvNetworkTrafficRefresh"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
@@ -62,19 +72,11 @@
             	android:textSize="@dimen/card_small_text_size"
             	android:text="@string/networktraffic_refresh_tv"/>
 
-        <Spinner 
+        <Spinner
 		android:id="@+id/networktraffic_refresh_spinner"
             	android:layout_width="fill_parent"
             	android:layout_height="wrap_content" />
 
     	</LinearLayout>
-	<TextView
-        		android:id="@+id/tvNetworkTrafficDesc"
-        		android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"
-        		android:textColor="@color/card_text"
-			android:textSize="@dimen/card_small_text_size" 
-			android:text="@string/networktrafficdesc"
-        		android:paddingBottom="@dimen/card_separator_padding"/>
 
 </LinearLayout>
