--- a/res/layout/card_config_doubletap.xml
+++ b/res/layout/card_config_doubletap.xml
@@ -8,6 +8,15 @@
     android:id="@+id/llDoubleTap"
     android:visibility="gone">
 
+    <TextView
+              android:id="@+id/tvdoubletapDesc"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="@color/card_text"
+        android:textSize="@dimen/card_small_text_size"
+        android:text="@string/doubletapdesc"
+              android:paddingBottom="@dimen/card_separator_padding"/>
+
 	<LinearLayout
     		android:layout_width="match_parent"
     		android:layout_height="match_parent"
@@ -23,7 +32,7 @@
 		<View
             		android:layout_width="0dp"
             		android:layout_height="0dp"
-            		android:layout_weight="1"/>           
+            		android:layout_weight="1"/>
 
     		<Switch
         		android:id="@+id/doubletapstatus_enable"
@@ -35,7 +44,8 @@
 	<LinearLayout
     		android:layout_width="match_parent"
     		android:layout_height="match_parent"
-    		android:orientation="horizontal">
+    		android:orientation="horizontal"
+              android:paddingBottom="@dimen/card_separator_padding">
 
 		<TextView
         		android:id="@+id/tvdoubletapnavLabel"
@@ -47,7 +57,7 @@
 		<View
             		android:layout_width="0dp"
             		android:layout_height="0dp"
-            		android:layout_weight="1"/>           
+            		android:layout_weight="1"/>
 
     		<Switch
         		android:id="@+id/doubletapnav_enable"
@@ -55,14 +65,5 @@
         		android:layout_height="wrap_content"/>
 
 	</LinearLayout>
-
-	<TextView
-        		android:id="@+id/tvdoubletapDesc"
-        		android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"
-        		android:textColor="@color/card_text"
-			android:textSize="@dimen/card_small_text_size" 
-			android:text="@string/doubletapdesc"
-        		android:paddingBottom="@dimen/card_separator_padding"/>
 
 </LinearLayout>
